examples/test/testpolicy16904.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16904
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key25: value42
      key1: value29
      key32: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value16
          key35: value27
          key17: value16
      podSelector:
        matchLabels:
          key12: value41
